Fix on mobile layout

--- a/scss/_fontawesome.scss
+++ b/scss/_fontawesome.scss
@@ -1,6 +1,6 @@
 /* Small margin for fontawesome icons */
 .fas {
-  margin: 0rem 0.5rem;
+  margin: 0rem .75rem 0rem 0rem;
 }
 
 /* Circle background for fontawesome icons */
