--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -2,7 +2,7 @@
 /* Large devices (desktops) */
 /* ######################## */
 
-@media (max-width: 1200px) {
+@media (max-width: 1280px) {
   .change-navbar-color {
     // background: #4781ff;
   }
@@ -19,6 +19,11 @@
     ul {
       font-size: 1.15rem;
     }
+  }
+
+  .content-section {
+    gap: 2rem;
+    padding: 3rem 2rem;
   }
 }
 
@@ -173,11 +178,40 @@
     }
   }
 
+    /* 03.d Why choose us */
+    .why-choose-us {
+      height: 100%;
+      .wrapper {
+        .title-section {
+          // background: rgba(0, 17, 255, 0.24);
+        }
+  
+        .content-section {
+          // background: rgba(255, 0, 200, 0.24);
+          display: grid;
+          grid-template-columns: 2rem 0.5fr 1.5fr;
+  
+          .why-choose-us-box {
+            grid-column: 2/3;
+            margin-bottom: 22rem;
+  
+            p {
+              margin: 1rem 0;
+            }
+          }
+  
+          .why-choose-us-person {
+            grid-column: 3/4;
+          }
+        }
+      }
+    }
+
   /* 03.e Contact */
   .contact {
     .title-section,
     .form-section {
-      padding: 4rem 10%;
+      padding: 0rem 10% 2rem 10%;
     }
   }
 
@@ -220,6 +254,10 @@
   .title-section {
     p {
       width: 90%;
+      // Hide the button at mobile resolution
+      a {
+        display: none;
+      }
     }
   }
 
@@ -247,7 +285,7 @@
   .courses {
     .content-section {
       display: grid;
-      grid-template-columns: 5% 1fr 5%;
+      grid-template-columns: auto 1fr auto;
       grid-template-rows: 1fr 1fr 1fr auto;
       // background: rgba(255, 0, 0, 0.281);
 
@@ -312,6 +350,8 @@
       .program-info {
         // background: rgba(0, 47, 255, 0.356);
         grid-column: 1/2;
+        text-align: center;
+        align-items:center;
 
         &#program-info-one {
           grid-column: 1/2;
@@ -331,9 +371,9 @@
         &-stats {
           font-size: 1.3rem;
 
-          i {
-            display: none;
-          }
+          // i {
+          //   display: none;
+          // }
         }
       }
     }
@@ -367,6 +407,7 @@
           grid-column: 1/2;
           justify-self: center;
           align-self: center;
+          margin-bottom: 2rem;
           p {
             margin: 1.5rem .5rem;
           }
@@ -387,6 +428,10 @@
     .wrapper {
       .title-section {
         padding: 1rem;
+        align-items: center;
+        h2,p {
+          text-align: center;
+        }
       }
       .form-section {
         padding: 1rem 0rem;
@@ -413,6 +458,7 @@
         }
         a {
           grid-column: 1/2;
+          justify-self: center;
         }
       }
     }
